k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ideacheck-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ideacheck.chernuha.space
      secretName: ideacheck-chernuha-space-tls
  rules:
    - host: ideacheck.chernuha.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ideacheck-svc
                port:
                  number: 3000
